--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sensors"
 version = "0.0.1"
 authors = ["Mikael Voss <mvs@nyantec.com>"]
-license = "LGPL-3.0"
+license = "MirOS"
 build = "build.rs"
 
 [dependencies]
