--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ build = "build.rs"
 description = "A Rust-friendly interface to lm-sensors"
 
 [dependencies]
-libsensors-sys = { git = "https://github.com/nyantec/libsensors-sys" }
+libsensors-sys = "0.1.0"
 libc = "0.2.30"
